--- a/mixer.html
+++ b/mixer.html
@@ -8,14 +8,14 @@
   <meta name="author" content="">
 
   <title id="pagetitle"></title>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="http://lookup.cheesesquadron.live/main.css">
   <link id="favicon" rel="shortcut icon" type="image/png"
     href="https://mixer.com/_latest/assets/favicons/favicon-16x16.png" />
   <script src=" https://code.jquery.com/jquery-3.4.1.js"
     integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous">
   </script>
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="http://lookup.cheesesquadron.live/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <!-- Custom fonts for this template -->
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
@@ -23,7 +23,7 @@
     rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/one-page-wonder.min.css" rel="stylesheet">
+  <link href="http://lookup.cheesesquadron.live/css/one-page-wonder.min.css" rel="stylesheet">
 
 </head>
 
@@ -54,10 +54,8 @@
       </div>
     </div>
   </section>
-
-      <script async src="https://cdn.headwayapp.co/widget.js"></script>
       <!-- Bootstrap core JavaScript -->
-      <script type="text/javascript" src="./js/generated.js">
+      <script type="text/javascript" src="http://lookup.cheesesquadron.live/js/generated.js">
       </script>
       <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
