--- a/index.html
+++ b/index.html
@@ -79,9 +79,16 @@
       <div class="row text-center layer">
         <div class="col-lg-12 order-lg-1">
           <h1 id="codetitle"></h1>
-          <p id="alphanote"></p>
-          <textarea rows="25" cols="100" id="code">
-          </textarea>
+          <div id="alphanote">
+            <p><a href="https://github.com/CheesePwn/Generate-MCL-Profile/archive/master.zip">Download</a> the Profile Generator</p>
+
+            <p>Open <b>generated.js</b> file in a text edtor or Visual Studio Code and change the variable username to your Mixer username.</p>
+
+            <textarea id="code">
+            </textarea>
+
+            <p id="">While this code will be updated regularly, the most up to date features will be on Mixer Channel Lookup.</p>
+          </div>
         </div>
       </div>
     </div>
