--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <title id="pagetitle">Mixer Channel Lookup</title>
   <link rel="stylesheet" type="text/css" href="main.css">
   <link id="favicon" rel="shortcut icon" type="image/png"
-    href="https://mixer.com/_latest/assets/favicons/favicon-16x16.png"/>
-  <script src=" https://code.jquery.com/jquery-3.4.1.js"
-    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous">
+    href="https://mixer.com/_latest/assets/favicons/favicon-16x16.png" />
+  <script src=" https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    crossorigin="anonymous">
     </script>
 
 
@@ -72,6 +72,13 @@
         </div>
       </div>
     </div>
+    <div class="container">
+      <div class="row layer">
+        <div class="col-lg-12 order-lg-1">
+          <div id="desc"></div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section class="padd">
@@ -80,32 +87,36 @@
         <div class="col-lg-12 order-lg-1">
           <h1 id="codetitle"></h1>
           <div id="alphanote">
-            <p><a href="https://github.com/CheesePwn/Generate-MCL-Profile/archive/master.zip">Download</a> the Profile Generator</p>
+            <p><a href="https://github.com/CheesePwn/Generate-MCL-Profile/archive/master.zip">Download</a> the Profile
+              Generator</p>
 
-            <p>Open <b>generated.js</b> file in a text edtor or Visual Studio Code and change the variable username to your Mixer username.</p>
+            <p>Open <b>generated.js</b> file in a text edtor or Visual Studio Code and change the variable username to
+              your Mixer username.</p>
 
             <textarea id="code">
             </textarea>
 
-            <p id="">While this code will be updated regularly, the most up to date features will be on Mixer Channel Lookup.</p>
+            <p id="">While this code will be updated regularly, the most up to date features will be on Mixer Channel
+              Lookup.</p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-      <section class="padd">
-        <p class="m-0 text-center footer-larger">Made with 💛 by <a href="https://cheesesquadron.live">Cheese</a></p>
-        <p class="m-0 text-center footer-larger"><a id="feedback" href="" class="m-0 text-center footer-larger">Send
-            Feedback</a></p>
-        <p class="m-0 text-center footer">Mixer is the property of Microsoft. This is a passion-project and is in no way
-          affiliated or endorsed by Microsoft or Mixer.
-        </p>
-      </section>
-      <script async src="https://cdn.headwayapp.co/widget.js"></script>
-      <!-- Bootstrap core JavaScript -->
-      <script type="text/javascript" src="./js/main.js"></script>
-      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <section class="padd">
+    <p class="m-0 text-center footer-larger">Made with 💛 by <a href="https://cheesesquadron.live">Cheese</a></p>
+    <p class="m-0 text-center footer-larger"><a id="feedback" href="" class="m-0 text-center footer-larger">Send
+        Feedback</a></p>
+    <p class="m-0 text-center footer">Mixer is the property of Microsoft. This is a passion-project and is in no way
+      affiliated or endorsed by Microsoft or Mixer.
+    </p>
+  </section>
+  
+  </script>
+  <!-- Bootstrap core JavaScript -->
+  <script type="text/javascript" src="./js/main.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
