Updated meta info

--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 
 <head>
 
+  <meta property="og:title" content="Mixer Channel Lookup">
+  <meta property="og:site_name" content="Mixer Channel Lookup">
+  <meta property="og:url" content="https://lookup.cheesesquadron.live">
+  <meta property="og:description" content="Mixer Channel Lookup is a tool to look up channels on Mixer and displays them in a beautifully laid out profile that you can download and embed to your site.">
+  <meta property="og:type" content="article">
+  <meta property="og:image" content="https://camo.githubusercontent.com/959f0a94666bc0a91fce179220c3f29c8561526f/68747470733a2f2f692e696d6775722e636f6d2f356779506462492e676966">
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
 
   <title id="pagetitle">Mixer Channel Lookup</title>
   <link rel="stylesheet" type="text/css" href="main.css">
