--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <span id="audience"></span>
             <h1 id="name"></h1>
             <h1 id="gametitle"></h1>
+            <h1 id="costream"></h1>
             <div>
               <p id="bio"></p>
             </div>
@@ -80,6 +81,7 @@
     <div class="container">
       <div class="row layer">
         <div class="col-lg-12 order-lg-1">
+          <h1 id="about"></h1>
           <div id="desc"></div>
         </div>
       </div>
