Rebrand to Mixlook

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
 <head>
 
-  <meta property="og:title" content="Mixer Channel Lookup">
-  <meta property="og:site_name" content="Mixer Channel Lookup">
-  <meta property="og:url" content="https://lookup.cheesesquadron.live">
-  <meta property="og:description" content="Mixer Channel Lookup is a tool to look up channels on Mixer and displays them in a beautifully laid out profile that you can download and embed to your site.">
+  <meta property="og:title" content="Mixlook">
+  <meta property="og:site_name" content="Mixlook">
+  <meta property="og:url" content="https://mixlook.cheesesquadron.live">
+  <meta property="og:description" content="Mixlook is a tool to look up channels on Mixer and displays them in a beautifully laid out profile that you can download and embed to your site.">
   <meta property="og:type" content="article">
-  <meta property="og:image" content="https://camo.githubusercontent.com/959f0a94666bc0a91fce179220c3f29c8561526f/68747470733a2f2f692e696d6775722e636f6d2f356779506462492e676966">
+  <meta property="og:image" content="./img/logo.png">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title id="pagetitle">Mixer Channel Lookup</title>
+  <title id="pagetitle">Mixlook</title>
   <link rel="stylesheet" type="text/css" href="main.css">
   <link id="favicon" rel="shortcut icon" type="image/png"
     href="https://mixer.com/_latest/assets/favicons/favicon-16x16.png" />
