--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
       <div class="row layer">
         <div class="col-lg-12 order-lg-1">
           <h1 id="about"></h1>
-          <div id="desc"></div>
+          <div id="desc">
+          </div>
         </div>
       </div>
     </div>
