--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
 </head>
 
-<body>
+<body id="scrollbar">
 
-  <header class="masthead text-center text-white">
+  <header class="masthead text-center text-white" id="header">
     <div class="masthead-content">
       <div class="container">
         <a class="navbar-brand" href="#">
@@ -104,19 +104,18 @@
             <textarea id="code">
             </textarea>
 
-            <p id="">While this code will be updated regularly, the most up to date features will be on Mixer Channel
-              Lookup.</p>
+            <p>While this code will be updated regularly, the most up to date features will be on Mixlook.</p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="padd">
+  <section class="padd" id="footer">
     <p class="m-0 text-center footer-larger">Made with 💛 by <a href="https://cheesesquadron.live">Cheese</a></p>
     <p class="m-0 text-center footer-larger"><a id="feedback" href="" class="m-0 text-center footer-larger">Send
         Feedback</a></p>
-    <p class="m-0 text-center footer">Mixer is the property of Microsoft. This is a passion-project and is in no way
+    <p class="m-0 text-center footer" style="padding-bottom: 20px;">Mixer is the property of Microsoft. This is a passion-project and is in no way
       affiliated or endorsed by Microsoft or Mixer.
     </p>
   </section>
