Basic animations + bug fixes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta property="og:title" content="Mixlook">
   <meta property="og:site_name" content="Mixlook">
   <meta property="og:url" content="https://mixlook.cheesesquadron.live">
-  <meta property="og:description" content="Mixlook is a tool to look up channels on Mixer and displays them in a beautifully laid out profile that you can download and embed to your site.">
+  <meta property="og:description"
+    content="Mixlook is a tool to look up channels on Mixer and displays them in a beautifully laid out profile that you can download and embed to your site.">
   <meta property="og:type" content="article">
   <meta property="og:image" content="./img/logo.png">
 
@@ -21,11 +22,11 @@
     crossorigin="anonymous">
     </script>
 
-
+      <!-- Animate.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-
 
   <!-- Custom fonts for this template -->
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
@@ -95,13 +96,15 @@
             <div id="alphanote">
               <p><a href="https://github.com/CheesePwn/Generate-MCL-Profile/archive/master.zip">Download</a> the Profile
                 Generator</p>
-  
+
+              <p>Experminental. Only advanced users should use this.</p>
+
               <p>Open <b>generated.js</b> file in a text edtor or Visual Studio Code and change the variable username to
                 your Mixer username.</p>
-  
+
               <textarea id="code">
               </textarea>
-  
+
               <p>While this code will be updated regularly, the most up to date features will be on Mixlook.</p>
             </div>
           </div>
@@ -112,12 +115,13 @@
       <p class="m-0 text-center footer-larger">Made with 💛 by <a href="https://cheesesquadron.live">Cheese</a></p>
       <p class="m-0 text-center footer-larger"><a id="feedback" href="" class="m-0 text-center footer-larger">Send
           Feedback</a></p>
-      <p class="m-0 text-center footer" style="padding-bottom: 20px;">Mixer is the property of Microsoft. This is a passion-project and is in no way
+      <p class="m-0 text-center footer" style="padding-bottom: 20px;">Mixer is the property of Microsoft. This is a
+        passion-project and is in no way
         affiliated or endorsed by Microsoft or Mixer.
       </p>
     </section>
   </section>
-  
+
   </script>
   <!-- Bootstrap core JavaScript -->
   <script type="text/javascript" src="./js/main.js"></script>
