--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
         </div>
       </div>
     </div>
+    <div class="container" id="twitter-timeline">
+      <div class="row">
+          <div class="col-lg-12 order-lg-1">
+          </div>
+      </div>
+    </div>
     <div class="container">
       <div class="row layer">
         <div class="col-lg-12 order-lg-1">
@@ -122,7 +128,7 @@
     </section>
   </section>
 
-  </script>
+
   <!-- Bootstrap core JavaScript -->
   <script type="text/javascript" src="./js/main.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
