--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
       <div class="row layer">
         <div class="col-lg-12 order-lg-1">
           <h1 id="about"></h1>
-          <div id="desc">
+              <div id="desc">
+              </div>
           </div>
         </div>
       </div>
@@ -118,12 +119,10 @@
       </div>
     </section>
     <section class="padd" id="footer">
-      <p class="m-0 text-center footer-larger">Made with 💛 by <a href="https://cheesesquadron.live">Cheese</a></p>
-      <p class="m-0 text-center footer-larger"><a id="feedback" href="" class="m-0 text-center footer-larger">Send
-          Feedback</a></p>
-      <p class="m-0 text-center footer" style="padding-bottom: 20px;">Mixer is the property of Microsoft. This is a
-        passion-project and is in no way
-        affiliated or endorsed by Microsoft or Mixer.
+      <p class="m-0 text-center footer-larger">Made with 💛 by <a href="https://cheesesquadron.live" target="_blank" >Cheese</a></p>
+      <p class="m-0 text-center footer-larger"><a id="feedback" href="https://headwayapp.co/mixlook-changelog" target="_blank" class="m-0 text-center footer-larger">Changelog</a></p>
+      <p class="m-0 text-center footer" style="padding-bottom: 20px;">
+        Mixer is the property of Microsoft. This is a passion-project and is in no way affiliated or endorsed by Microsoft or Mixer.
       </p>
     </section>
   </section>
@@ -132,6 +131,14 @@
   <!-- Bootstrap core JavaScript -->
   <script type="text/javascript" src="./js/main.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
+    new Crate({
+      server: '544532292329144322',
+      channel: '591816384607158302',
+      shard: 'https://disweb.deploys.io'
+    })
+  </script>
 
 </body>
 
