--- a/index.html
+++ b/index.html
@@ -100,19 +100,14 @@
           <div class="col-lg-12 order-lg-1">
             <h1 id="codetitle"></h1>
             <div id="alphanote">
-              <p><a href="https://github.com/CheesePwn/Generate-MCL-Profile/archive/master.zip">Download</a> the Profile
-                Generator</p>
+                <p>Experminental. Only advanced users should use this.</p>
+                <p>You must have <a href="https://code.jquery.com/jquery/" target="_blank">jQuery</a> in order to use this widget!</p>
 
-              <p>Experminental. Only advanced users should use this.</p>
-
-              <p>Open <b>generated.js</b> file in a text edtor or Visual Studio Code and change the variable username to
-                your Mixer username.</p>
-
-              <textarea id="code">
-                  
+              <textarea rows="6" id="code">
+                <div id="mixlook"></div>
+                <script src="https://mixlook.cheesesquadron.live/js/mixlook.js" crossorigin="anonymous"></script>
+                <script>username="BreeSenpai";getWidget()</script>
               </textarea>
-
-              <p>While this code will be updated regularly, the most up to date features will be on Mixlook.</p>
             </div>
           </div>
         </div>
@@ -129,7 +124,7 @@
 
 
   <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="./js/main.js"></script>
+  <script type="text/javascript" src="./js/mixlook.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
