--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <header class="masthead text-center text-white" id="header">
     <div class="masthead-content">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="https://mixlook.cheesesquadron.live">
           <img style="max-width:250px; margin-top: -7px;" src="./img/logo.png">
         </a>
         <input id="uname" class="uname" type="text" autocomplete="off" placeholder="Enter your username...">
@@ -53,7 +53,7 @@
       </div>
   </header>
 
-  <section id="profile">
+  <section id="profile" class="padd">
     <div id="app" class="container">
       <div class="row text-center layer">
         <div class="col-lg-12 order-lg-1">
@@ -94,7 +94,7 @@
         </div>
       </div>
     </div>
-    <section class="padd">
+    <section class="padd" id="widget">
       <div id="app" class="container">
         <div class="row text-center layer">
           <div class="col-lg-12 order-lg-1">
@@ -113,7 +113,7 @@
         </div>
       </div>
     </section>
-    <section class="padd" id="footer">
+    <section id="footer">
       <p class="m-0 text-center footer-larger">Made with 💛 by <a href="https://cheesesquadron.live" target="_blank" >Cheese</a></p>
       <p class="m-0 text-center footer-larger"><a id="feedback" href="https://headwayapp.co/mixlook-changelog" target="_blank" class="m-0 text-center footer-larger">Changelog</a></p>
       <p class="m-0 text-center footer" style="padding-bottom: 20px;">
@@ -126,14 +126,6 @@
   <!-- Bootstrap core JavaScript -->
   <script type="text/javascript" src="./js/mixlook.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
-    new Crate({
-      server: '544532292329144322',
-      channel: '591816384607158302',
-      shard: 'https://disweb.deploys.io'
-    })
-  </script>
 
 </body>
 
