--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta property="og:title" content="Mixlook">
   <meta property="og:site_name" content="Mixlook">
-  <meta property="og:url" content="https://mixlook.cheesesquadron.live">
+  <meta property="og:url" content="https://mixlook.ml">
   <meta property="og:description"
     content="Mixlook is a tool to look up channels on Mixer and displays them in a beautifully laid out profile that you can download and embed to your site.">
   <meta property="og:type" content="article">
@@ -43,7 +43,7 @@
   <header class="masthead text-center text-white" id="header">
     <div class="masthead-content">
       <div class="container">
-        <a class="navbar-brand" href="https://mixlook.cheesesquadron.live">
+        <a class="navbar-brand" href="https://mixlook.ml">
           <img style="max-width:250px; margin-top: -7px;" src="./img/logo.png">
         </a>
         <input id="uname" class="uname" type="text" autocomplete="off" placeholder="Enter your username...">
@@ -105,7 +105,7 @@
 
               <textarea rows="6" id="code">
                 <div id="mixlook"></div>
-                <script src="https://mixlook.cheesesquadron.live/js/mixlook.js" crossorigin="anonymous"></script>
+                <script src="https://mixlook.ml/js/mixlook.js" crossorigin="anonymous"></script>
                 <script>username="BreeSenpai";getWidget()</script>
               </textarea>
             </div>
