--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container" id="about-section">
       <div class="row layer">
         <div class="col-lg-12 order-lg-1">
           <h1 id="about"></h1>
@@ -100,14 +100,13 @@
           <div class="col-lg-12 order-lg-1">
             <h1 id="codetitle"></h1>
             <div id="alphanote">
-                <p>Experminental. Only advanced users should use this.</p>
-                <p>You must have <a href="https://code.jquery.com/jquery/" target="_blank">jQuery</a> in order to use this widget!</p>
-
-              <textarea rows="6" id="code">
-                <div id="mixlook"></div>
-                <script src="https://mixlook.ml/js/mixlook.js" crossorigin="anonymous"></script>
-                <script>username="BreeSenpai";getWidget()</script>
+              <textarea rows="1" id="code">
+                
               </textarea>
+            </div>
+            <div id="widgetbutts">
+                <a class="btn btn-primary" target="_blank" id="clipb">Copy to clipboard</a>
+                <a class="btn btn-primary" target="_blank" id="viewb">View embed</a>
             </div>
           </div>
         </div>
