--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 
   <!-- Bootstrap core JavaScript -->
   <script type="text/javascript" src="./js/mixlook.js"></script>
+  <script type="text/javascript" src="./js/drift.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
