--- a/index.html
+++ b/index.html
@@ -116,7 +116,12 @@
       <p class="m-0 text-center footer-larger">Made with 💛 by <a href="https://cheesesquadron.live" target="_blank" >Cheese</a></p>
       <p class="m-0 text-center footer-larger"><a id="feedback" href="https://headwayapp.co/mixlook-changelog" target="_blank" class="m-0 text-center footer-larger">Changelog</a></p>
       <p class="m-0 text-center footer" style="padding-bottom: 20px;">
-        Mixer is the property of Microsoft. This is a passion-project and is in no way affiliated or endorsed by Microsoft or Mixer.
+        Mixer is the property of Microsoft. This is an open-source passion-project and is in no way affiliated or endorsed by Microsoft or Mixer.
+      </p>
+      <p class="m-0 text-center footer">
+        <a id="authoss" class="m-0 text-center footer" href="https://auth0.com/?utm_source=oss&utm_medium=gp&utm_campaign=oss" target="_blank" 
+        alt="Single Sign On & Token Based Authentication - Auth0"><img max-width="200px" alt="JWT Auth for open source projects" 
+        src="//cdn.auth0.com/oss/badges/a0-badge-dark.png"/></a>
       </p>
     </section>
   </section>
