--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
     </section>
     <section id="footer">
-      <p class="m-0 text-center footer-larger">Made with 💛 by <a href="https://cheesesquadron.live" target="_blank" >Cheese</a></p>
+      <p class="m-0 text-center footer-larger">Made with 💛 by <a style="color: orange;" href="https://github.com/oohq/mixlook" target="_blank" >OOHQ</a></p>
       <p class="m-0 text-center footer-larger"><a id="feedback" href="https://headwayapp.co/mixlook-changelog" target="_blank" class="m-0 text-center footer-larger">Changelog</a></p>
       <p class="m-0 text-center footer" style="padding-bottom: 20px;">
         Mixer is the property of Microsoft. This is an open-source passion-project and is in no way affiliated or endorsed by Microsoft or Mixer.
