--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 
 <head>
 
-  <meta property="og:title" content="Mixlook">
-  <meta property="og:site_name" content="Mixlook">
-  <meta property="og:url" content="https://mixlook.ml">
-  <meta property="og:description"
-    content="Mixlook is a tool to look up channels on Mixer and displays them in a beautifully laid out profile that you can download and embed to your site.">
-  <meta property="og:type" content="article">
-  <meta property="og:image" content="./img/logo.png">
+<meta property="og:title" content="Mixlook">
+<meta property="og:site_name" content="Mixlook">
+<meta property="og:url" content="https://mixlook.ml">
+<meta property="og:description"
+content="Mixlook is a tool to look up channels on Mixer and displays them in a beautifully laid out profile that you can download and embed to your site.">
+<meta property="og:type" content="article">
+<meta property='og:image' content='https://mixlook.ml/img/header.png' />
+<meta property='og:image:type' content='image/png' data-dynamic='true'>
+<meta property='og:image:width' content='1200'  data-dynamic='true' />
+<meta property='og:image:height' content='630'  data-dynamic='true' />
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
