More Info Update!
Level, sparks, experience and joined date info!

--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@ content="Mixlook is a tool to look up channels on Mixer and displays them in a b
             <span id="audience"></span>
             <h1 id="name"></h1>
             <h1 id="gametitle"></h1>
+            <div id="stats">
+              <span id="level"></span>
+              <span id="sparks"></span>
+              <span id="xp"></span>
+              <span id="age"></span> 
+            </div>
             <h1 id="costream"></h1>
             <div>
               <p id="bio"></p>
