--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta property="og:site_name" content="Mixlook">
 <meta property="og:url" content="https://mixlook.ml">
 <meta property="og:description"
-content="Mixlook is a tool to look up channels on Mixer and displays them in a beautifully laid out profile that you can download and embed to your site.">
+content="Mixlook is a tool to look up channels on Mixer and displays them in a beautifully laid out profile that you can view and embed to your site.">
 <meta property="og:type" content="article">
 <meta property='og:image' content='https://mixlook.ml/img/header.png' />
 <meta property='og:image:type' content='image/png' data-dynamic='true'>
