Revert "basic client side auth"

--- a/index.html
+++ b/index.html
@@ -49,11 +49,10 @@ content="Mixlook is a tool to look up channels on Mixer and displays them in a b
         <a class="navbar-brand" href="https://mixlook.ml">
           <img style="max-width:250px; margin-top: -7px;" src="./img/logo.png">
         </a>
-        <a href="https://mixer.com/oauth/authorize?client_id=149df06d0be566abe4ff212f3761f4dded502c34eba4a75b&response_type=token&redirect_uri=http://127.0.0.1:5000" id="login">
-          <button style="border-radius: 15px; border: none; padding: 10px;">Log in with Mixer</button>
-        </a>
-        <button id="logout" style="border-radius: 15px; border: none; padding: 10px; display: none;">Log out</button>
-        
+        <input id="uname" class="uname" type="text" autocomplete="off" placeholder="Enter your username...">
+      </div>
+      <div class="container">
+        <h2 class="masthead-subheading mb-0" id="generated">It's like magic. ✨ No signup required!</h2>
       </div>
   </header>
 
